--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,7 @@
 <h1>Sam Dobbs</h1>
 <p>Version Control Essentials</p>
 <p>This is actually the change I want</p>
+
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorum, doloribus, itaque commodi quia totam laudantium a fugit deleniti quo corporis, laborum rerum illo pariatur suscipit atque eligendi optio! Sed quod reiciendis atque aliquam iusto repudiandae quisquam, ullam perspiciatis vero tempore doloribus quae, laborum commodi delectus, dignissimos cumque accusantium? Architecto.
+</p>
